# efs_c_sdk

./: README.md
demo/: CMakeLists.txt  Makefile  cdn_bandwidth.c  cdn_flux.c  cdn_loglist.c  cdn_prefetch.c  cdn_refresh.c  efstest  gen_download_url_with_deadline.c  put_file.c  put_file_abortable.c  put_stream.c  resource_manger.c
docs/: README.gist.md
docs/gist/: Makefile  client.c  server.c
efs/: auth_mac.c  base.c  base.h  base_io.c  cdn.c  cdn.h  conf.c  conf.h  efs.bat  efs.def  efs.dsp  fop.c  fop.h  http.c  http.h  io.c  io.h  macro.h  qetag.c  qetag.h  reader.c  reader.h  region.c  region.h  resumable_io.c  resumable_io.h  rs.c  rs.h  tm.c  tm.h
windows/: emu_posix.c  emu_posix.h
